--- a/graph/templates/graph/covid_chart_map.html
+++ b/graph/templates/graph/covid_chart_map.html
@@ -509,8 +509,10 @@ margin-left: -10vw;
  	<div class="row">
     	<div class="col-md-1"></div>
     	<div class="col-md-10">
-			<canvas id="myChart" width="200" height="400"</canvas>
-	
+    		<div style="height: 400px">
+    		
+			<canvas id="myChart" </canvas>
+			</div>
 		</div>
 	    <div class="col-md-1"></div>
   	</div>
@@ -531,7 +533,9 @@ margin-left: -10vw;
  	<div class="row">
     	<div class="col-md-1"></div>
     	<div class="col-md-10">
-			<canvas id="casechart" width="200" height="400"</canvas>
+			<div style="height: 400px">
+			<canvas id="casechart"> </canvas>
+		</div?
 		</div>
 	    <div class="col-md-1"></div>
   	</div>
@@ -543,8 +547,9 @@ margin-left: -10vw;
     	<div class="col-md-10">
  Deaths are derived from <b>death certificates where COVID-19 is listed as a cause of death</b>. Location is by place of death. These figures are likely an under-estimate in most areas as the figure is significantly below recorded excess deaths for the time of year, as illustrated in this next chart which compares deaths from all causes against an average deaths in that week in the previous five years.
 <p><p>
-
-			<canvas id="myDeathChart" width="200" height="400"</canvas>
+<div style="height: 400px">
+			<canvas id="myDeathChart"></canvas>
+		</div>
 		</div>
 	    <div class="col-md-1"></div>
   	</div>
@@ -557,9 +562,9 @@ margin-left: -10vw;
 <br />
 Using the official figure for coronavirus cases, based on test results, is an misleading way to view the spread of the pandemic. It is clear from the many deaths that followed, that the new coronavirus was spreading widely in the UK long before significant testing began. With inconsistent and low volumes of testing for COVID-19, one way of estimating real infections is working back from deaths that follow approximately 3 weeks later. 
 <p>
-    		
-			<canvas id="estimates" width="200" height="400"</canvas>
-		</div>
+    		<div style="height: 400px">
+			<canvas id="estimates"></canvas>
+		</div></div>
 	    <div class="col-md-1"></div>
   	</div>
 
