--- a/graph/templates/graph/covid_chart_map.html
+++ b/graph/templates/graph/covid_chart_map.html
@@ -456,7 +456,7 @@
 	<div class="mainmap">
 		<div id="mapid"></div>
 	</div>
-</div>
+
 <p>
 
  	<div class="row">
@@ -474,8 +474,8 @@
     	<div class="col-md-1"></div>
     	<div class="col-md-10">
 			<p>			
-			* The figures for <b>tests with a positive COVID-19 result</b> come from labs run by Public Health England, NHS hospitals, and private "Lighthouse" labs. The figures are updated daily.
-			<p>
+			* The figures for <b>tests with a positive COVID-19 result</b> come from labs run by Public Health England, NHS hospitals, and private "Lighthouse" labs. The figures are updated daily and <b>shown below</b> for recent dates when tests took place. The total for recent days are under-under-estimates because it takes some time for all the results to be published.
+					<p>
 		</div>
 	    <div class="col-md-1"></div>
   	</div>
@@ -485,7 +485,7 @@
     	<div class="col-md-10">
 			<div style="height: 400px">
 			<canvas id="casechart"> </canvas>
-		</div?
+		</div>
 		</div>
 	    <div class="col-md-1"></div>
   	</div>
