dont zoom at start

--- a/graph/templates/graph/covid_chart_map.html
+++ b/graph/templates/graph/covid_chart_map.html
@@ -548,6 +548,7 @@
 var api_fetch={{api_status}}
 var last_update="{{last_update}}"
 var focus_place="{{place}}"
+var first_load=true
 function firstload(){
 loadmap("{{place}}");
 get_data("{{place}}");
