--- a/graph/templates/graph/covid_chart_map.html
+++ b/graph/templates/graph/covid_chart_map.html
@@ -510,7 +510,7 @@
     	<div class="col-md-10">
     		<p>
 			<br />
-			Using the official figure for coronavirus cases, based on test results, is an misleading way to view the spread of the pandemic. It is clear from the many deaths that followed, that the new coronavirus was spreading widely in the UK long before significant testing began. With inconsistent and low volumes of testing for COVID-19, one way of estimating real infections is working back from deaths that follow approximately 3 weeks later. 
+			Using the official figure for coronavirus cases, based on test results, is a misleading way to view the spread of the pandemic. It is clear from the many deaths that followed, that the new coronavirus was spreading widely in the UK long before significant testing began. With inconsistent and low volumes of testing for COVID-19, one way of estimating real infections is working back from deaths that follow approximately 3 weeks later. 
 			<p>
 			<div style="height: 400px">
 				<canvas id="estimates"></canvas>
