--- a/graph/templates/graph/covid_chart_map.html
+++ b/graph/templates/graph/covid_chart_map.html
@@ -20,7 +20,7 @@
 		<div class="col-md-1"></div>
 		<h1>COVID Kingdom: the UK <b>COVID-19 Tracker</b></h1>
 		<p>
-		<h4>Explore the latest Covid-19 data in Britain - select an area on the map or drop-down menu to see the latest cases and track how the virus spread locally and across Britain. See the patterns of tests, excess deaths, and the Reuters estimate of when infections arrived.</h4><h5> <b>Last updated: {{last_update}}</b> </h5>
+		<h4>Explore the latest Covid-19 data in Britain - select an area on the map or drop-down menu to see the latest cases and track how the virus spread locally and across Britain. See the patterns of tests, excess deaths, and the Reuters estimate of when infections arrived.</h4><h5> <b>Last updated: {{last_update}}</b> </h5>&emsp;&emsp;<a href="{% url 'home' %}">Return to national dashboard.<a>
 		<div class="col-md-1"></div>
 	</div>
 
