test spark lines

--- a/graph/templates/graph/covid_chart_index.html
+++ b/graph/templates/graph/covid_chart_index.html
@@ -52,13 +52,13 @@ tr:nth-child(even) {
 				  <tr>
 				    <th>Area</th>
 				    <th>Infection rate
-				    <small><p>(weekly cases to {{last_cases}} per 100,000 people)</small></th>
+				    <small><p>(weekly cases to {{last_cases}}<br> per 100,000 people)</small></th>
 				    <th><small>change in 14 days</small></th>
 				    <th>Deaths since September*</th>
 				    <th>Deaths in last 30 days*</th>
 <!--				    <th>Test result av. days delay</th>
 -->
-				    <th>Excess deaths 2020<small><p>(per 100,000 people)</small></th>    
+				    <th>Excess deaths 2020<small><p>(per 100,000 people)**</small></th>    
 				  </tr>
 				{% for rates in nations %}
 				  <tr>
@@ -91,8 +91,7 @@ tr:nth-child(even) {
 				  <tr>
 				    <th>Area</th>
 				    <th>Infection rate
-				    <small><p>(weekly cases to {{last_cases}} per 100,000 people)</small></th>
-				    <th><small>change in 14 days</small></th>
+				    <small><p>(weekly cases to {{last_cases}}<br> per 100,000 people)</small></th>				    <th><small>change in 14 days</small></th>
 				    <th>Deaths since September</th>
 				    <th>Deaths in last 30 days</th>
 <!--				    <th>Test result av. days delay</th>
@@ -128,8 +127,7 @@ tr:nth-child(even) {
 				  <tr>
 				    <th>Area</th>
 				    <th>Infection rate
-				    <small><p>(weekly cases to {{last_cases}} per 100,000 people)</small></th>
-				    <th><small>change in 14 days</small></th>
+				    <small><p>(weekly cases to {{last_cases}}<br> per 100,000 people)</small></th>				    <th><small>change in 14 days</small></th>
 				    <th>Deaths since September</th>
 				    <th>Deaths in last 30 days</th>
 <!--				    <th>Test result av. days delay</th>
