--- a/graph/templates/graph/covid_chart_mapBETA.html
+++ b/graph/templates/graph/covid_chart_mapBETA.html
@@ -490,12 +490,7 @@ margin-left: -10vw;
 </div>
 <br><br>
 <p>
-<div class="container">
-<div class="mainmap">
-<div id="mapid"></div>
-</div>
-</div>
-<p>
+<<p>
 
 </div>
 
@@ -504,18 +499,26 @@ margin-left: -10vw;
  	<div class="row">
     	<div class="col-md-1"></div>
     	<div class="col-md-10">
-    		<div class="row-full">
+ <!--   		<div class="row-full">
 			<canvas id="myChart" width="200" height="400"</canvas>
 			</div>
-		</div>
+-->		</div>
 	    <div class="col-md-1"></div>
   	</div>
   	 <div class="row">
     	<div class="col-md-1"></div>
     	<div class="col-md-10">
-    		<div class="row-full">
+ <!--   		<div class="row-full">
 			<canvas id="myDeathChart" width="200" height="400"</canvas>
+			
+
+			
 			</div>
+			
+			<div class="mainmap">
+			<div id="mapid"></div>
+			</div>
+-->			
 		</div>
 	    <div class="col-md-1"></div>
   	</div>
